# LocalMate

./: .env.example  .gitignore  .gitmodules  DATABASE_README.md  NEO4J_QUICKSTART.md  README.md  all_urls.json  analyze_gmaps_structure.py  analyze_results.py  crawl_all.py  crawl_gmaps_enhanced.py  crawl_gmaps_production.py  crawl_gmaps_v2.py  crawler_urls.txt  create_spatial_cypher.py  get_2_places.py  import_to_neo4j.py  index.html  inspect_gmaps_structure.py  load_urls.py  merge_data.py  neo4j_examples.py  neo4j_use_cases.py  package-lock.json  package.json  requirements.txt  requirements_rag.txt  retry_spatial.py  sample_2_places.json  streamlit_demo.py  test_api.py  test_crawl_gmaps.py
api/: main.py  (+4 more)
localmate-danang-backend/: .env.example  .gitignore  PR_REVIEW_COMMENTS.md  README.md  RUN.md  Structure.md  TEST_REPORT.md  alembic.ini  pyproject.toml  supabase_schema.txt
localmate-danang-backend/app/: __init__.py  config.py  main.py
localmate-danang-backend/app/api/v1/: router.py
localmate-danang-backend/app/core/: __init__.py  config.py  security.py
localmate-danang-backend/app/guide_app/: __init__.py
localmate-danang-backend/app/guide_app/agents/: __init__.py  guide_agent.py
localmate-danang-backend/app/guide_app/api/: __init__.py  driver_guide_router.py  router.py
localmate-danang-backend/app/guide_app/schemas/: __init__.py  guide_pack_schemas.py  guide_schemas.py
localmate-danang-backend/app/guide_app/services/: __init__.py  guide_pack_service.py
localmate-danang-backend/app/guide_app/tests/: __init__.py
localmate-danang-backend/app/planner_app/: __init__.py
localmate-danang-backend/app/planner_app/agents/: __init__.py  planner_agent.py
localmate-danang-backend/app/planner_app/api/: __init__.py  itineraries_router.py  mcp_router.py  router.py
localmate-danang-backend/app/planner_app/schemas/: __init__.py  action_schemas.py  itinerary_schemas.py
localmate-danang-backend/app/planner_app/services/: __init__.py  itinerary_service.py
localmate-danang-backend/app/shared/: __init__.py
localmate-danang-backend/docs/: CONVENTIONS.md  DATABASE_SETUP.md  Database.md  Folder Structure.md  Overview.md  Phases.md  Plan.md  QUICK_REF.md
localmate-danang-backend/docs/phases/: README.md  phase_0_bootstrap.md  phase_1_planner_api_skeleton.md  phase_2_neo4j_integration.md  phase_3_tsp_optimization.md  phase_4_llm_integration.md  phase_5_mcp_actions.md  phase_6_guide_pack.md
localmate-danang-backend/tests/: conftest.py  test_core.py  test_guide_api.py  test_planner_api.py  test_services.py
(+212 files in other folders)
