[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localmate-danang-backend"
version = "0.1.0"
description = "AI-powered travel assistant backend for Da Nang"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "neo4j>=5.16.0",
    "openai>=1.10.0",
    "anthropic>=0.8.0",
    "google-generativeai>=0.3.0",
    "supabase>=2.3.0",
    "redis>=5.0.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "aiohttp>=3.9.1",
    "httpx>=0.26.0",
    "tenacity>=8.2.3",
    "numpy>=1.26.3",
    "scipy>=1.11.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.13",
    "mypy>=1.8.0",
    "httpx>=0.26.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/planner_app/tests", "app/guide_app/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
